// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render snapshots set value 1`] = `
<textarea
  className=""
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onSelect={[Function]}
  placeholder="placeholder"
  value="value"
/>
`;

exports[`render snapshots set value like placeholder 1`] = `
<textarea
  className=" placeholder"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onSelect={[Function]}
  placeholder="placeholder"
  type="text"
  value="placeholder"
/>
`;
